--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -4,7 +4,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: url('../img/simplix.png') no-repeat;
+    background: url('simplix.png') no-repeat;
     background-size: cover;
     background-color: plum;
 }
@@ -81,8 +81,10 @@ body{
     text-align: center;
 }
 
-.btn:hover{
+#loginbtn:hover{
     border: 2px solid whitesmoke;
+    background-color: burlywood;
+    color: white;
 }
 
 #signupprompt{
