--- a/views/feed.hbs
+++ b/views/feed.hbs
@@ -3,19 +3,23 @@
             <div class="postHeader">
                 <div id="userIcon"></div>
                 <div id="bananas">
-                    <p id="username">louispie</p> <br>
-                    <p id="datetime">January 24, 2020 10:22 AM</p>
+                    <p id="username">{{username}}</p> <br>
+                    <p id="datetime">{{date}}</p>
                     <div id="menuIcon"></div>
                 </div>
             </div>
-            <div id="postImg"></div>
+            <div class="imgCap">
+                <img src="{{img}}"/>
+                <p id="postTitle">{{postTitle}}</p>
+                <p id="caption">{{cap}}</p>
+            </div>
             <div class="postFooter">
                 <div id="icons">
-                    <img src="images/like.png" id="btnLike">
-                    <img src="images/comment.png" id="btnComment">
+                    <img src="../public/stylesheets/images/like.png" id="btnLike">
+                    <img src="../public/stylesheets/images/comment.png" id="btnComment">
                 </div>
                 <div id="apples">
-                    <p id="numberOfLikes">25 Likes</p>
+                    <p id="numberOfLikes">{{numLikes}} Likes</p>
                 </div>
             </div>
             <div id="comments">
