--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,10 +5,11 @@
         <title>Simplix</title>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" type="text/javascript"></script>
         <link href='http://fonts.googleapis.com/css?family=Berkshire+Swash' rel='stylesheet' type='text/css'>
+        <script src="js/script.js"></script>
         
         <style>
             .container{
-                background-color: bisque;
+                background-color: bisque;    
             }
             
             body{
@@ -44,7 +45,7 @@
                 <a class="nav-link" href="/profile" id="prof">Profile <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/new_post" id="newpost">Create</a>
+                <a class="nav-link" href="/post" id="newpost">Create</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/login" id="newpost">Logout</a>
