--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,15 +4,12 @@
         <link rel='stylesheet' type='text/css' href='/stylesheets/login.css' />
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script>
-            const pwsupp="webapde"
-            const unsupp="louispie"
-            
             $(document).ready(function(e){
                 $(".btn").submit(function(e){
                     e.preventDefault()
 					send()					
                 });
-                
+/*                
                 $(".btn").click(send)
                 
                 function send(){
@@ -34,18 +31,18 @@
                     
                     
                 }
-                
+ */               
 //                function login(){
 //                    window.location.href="feed.html"  
 //                }
-            })
+            });
         </script>
     </head>
     
     <body>
 <!--        <script src="Login.js"></script>-->
         <div class="login-box">
-            
+        <form action="/log" method="POST">    
             <h1 id="logintxt">Login</h1>
             <div class="textbox">
                 <i class="fa fa-user" aria-hidden="true"></i>
@@ -58,9 +55,10 @@
             </div>
             
 <!--        <input class="btns" type="button" name="" value="Login">-->
-            <p class="btn" id="loginbtn"><a href="/feed">Log In</a></p>
+            <p class="btn" id="loginbtn" type="submit"><a href="/feed">Log In</a></p>
 <!--        <input class="btn" type="button" name="" value="Sign Up">-->
-            <p id="signupprompt"><a href='/register'>Sign Up</a></p>
+            <p id="signupprompt"><a href='/user'>Sign Up</a></p>
+        </form>
         </div>
         
     </body>
