--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -4,8 +4,8 @@
                 
                 <div id="profpic" class="rounded mx-auto d-block"></div>
 <!--                <img src="images/dog.jpg" id="profpic" class="rounded mx-auto d-block">-->
-                  <h1 id="profileUsername">louispie</h1>
-                  <p class="title" id="profileBio">Dog Lover</p>
+                  <h1>louispie</h1>
+                  <p class="title">Dog Lover</p>
                   <p>De La Salle University</p>
 <!--
                   <a href="#"><i class="fa fa-dribbble"></i></a>
