--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -39,10 +39,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="/feed" id="homebutt">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/post/feed" id="homebutt">Home <span class="sr-only">(current)</span></a>
               </li>
                 <li class="nav-item active">
-                <a class="nav-link" href="/profile" id="prof">Profile <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/user/profile" id="prof">Profile <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/post" id="newpost">Create</a>
