--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,10 +1,11 @@
  <div class="mx-auto" style="width: 600px;" id="createcard">
+
             <div class="card" style="width: 36rem;", id="createpost">
                 <p class="create">Profile</p>
                 
                 <div id="profpic" class="rounded mx-auto d-block"></div>
 <!--                <img src="images/dog.jpg" id="profpic" class="rounded mx-auto d-block">-->
-                  <h1>louispie</h1>
+                  <h1>{{username}}</h1>
                   <p class="title">Dog Lover</p>
                   <p>De La Salle University</p>
 <!--
@@ -23,4 +24,5 @@
                     <img src="images/forest.jpeg" id="profilefeed" class="rounded mx-auto d-block">
 -->
                 </div>
+
         </div>
