--- a/views/feed.hbs
+++ b/views/feed.hbs
@@ -1,32 +1,54 @@
- <div class="contentContainer">
-     
-            <div class="postHeader">
-                <div id="userIcon"></div>
-                <div id="bananas">
-                    <p id="username">{{username}}</p> <br>
-                    <p id="datetime">{{date}}</p>
-                    <div id="menuIcon"></div>
-                </div>
-            </div>
-            <div class="imgCap">
-                <img src="{{img}}"/>
-                <p id="postTitle">{{postTitle}}</p>
-                <p id="caption">{{cap}}</p>
-            </div>
-            <div class="postFooter">
-                <div id="icons">
-                    <img src="../public/stylesheets/images/like.png" id="btnLike">
-                    <img src="../public/stylesheets/images/comment.png" id="btnComment">
-                </div>
-                <div id="apples">
-                    <p id="numberOfLikes">{{numLikes}} Likes</p>
-                </div>
-            </div>
-            <div id="comments">
-                    <div id="userIconComment"></div>
-                    <div id="kiwi">
-                        <p id="usernameComment">baileybear</p>
-                        <div id="comment">Super loooove this!</div>
+<html>
+    <head>
+        <script>
+            function like(){
+                var value = parseInt(document.getElementById('numberOfLikes').value, 10);
+                value = isNaN(value) ? 0 : value;
+                value++;
+                document.getElementById('numberOfLikes').innerHTML = value;
+            }
+        </script>
+    </head>
+    
+    <body>
+        <div class="contentContainer">
+            {{#each posts}}
+                <div class="postHeader">
+                    <div id="userIcon"></div>
+                    <div id="bananas">
+                        <p id="username">username</p> <br>
+                        <p id="datetime">{{date}}</p>
+                        <div id="menuIcon"></div>
                     </div>
-            </div>
-</div>
+                </div>
+                <div class="imgCap">
+                    <img src="{{img}}"/>
+                    <p id="postTitle"><strong>{{this.title}}</strong></p>
+                    <p id="caption">{{this.caption}}</p>
+                </div>
+                <div class="postFooter">
+                    <div id="icons">
+                        <img src="../public/stylesheets/images/like.png" id="btnLike" onclick="like()">
+                        <img src="../public/stylesheets/images/comment.png" id="btnComment">
+                    </div>
+                    <div id="apples">
+                        <p id="numberOfLikes">0</p><p id="likelike"> Likes</p>
+                    </div>
+                </div>
+                <div id="comments">
+                        <div id="userIconComment"></div>
+                        <div id="kiwi">
+                            <p id="usernameComment">baileybear</p>
+                            <div id="comment">Super loooove this!</div>
+                        </div>
+                </div>
+                <br><br>
+                <hr>
+            {{/each}}
+        </div>
+
+    </body>
+</html> 
+
+
+
