--- a/views/login.hbs
+++ b/views/login.hbs
@@ -40,7 +40,6 @@
     </head>
     
     <body>
-<!--        <script src="Login.js"></script>-->
         <div class="login-box">
         <form action="/log" method="POST">    
             <h1 id="logintxt">Login</h1>
@@ -57,7 +56,7 @@
 <!--        <input class="btns" type="button" name="" value="Login">-->
             <p class="btn" id="loginbtn" type="submit"><a href="/feed">Log In</a></p>
 <!--        <input class="btn" type="button" name="" value="Sign Up">-->
-            <p id="signupprompt"><a href='/user'>Sign Up</a></p>
+            <p id="signupprompt"><a href='/user'>No account yet? Sign Up</a></p>
         </form>
         </div>
         
