--- a/views/new_post.hbs
+++ b/views/new_post.hbs
@@ -8,7 +8,7 @@
             </div>                
             <label for="exampleFormControlFile1">Insert File</label>
             <input type="file" class="form-control-file" id="exampleFormControlFile1" name="img">
-            <button type="submit" class="btn btn-primary" id="buttpost">POST</button>
+            <button type="submit" class="btn btn-primary" href="/post/feed" id="buttpost">POST</button>
         </form>
     </div>
 </div>
