--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -48,7 +48,7 @@
                 <a class="nav-link" href="/post" id="newpost">Create</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/login" id="newpost">Logout</a>
+                <a class="nav-link" href="/logout" id="newpost">Logout</a>
             </li>
               
             </ul>
