--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,208 +1,232 @@
-body{
-    font-family: sans-serif;
-    background-color: antiquewhite;
+body {
+  font-family: sans-serif;
+  background-color: antiquewhite;
 }
 
-h1{
-    font: 400 100px/1.3 'Berkshire Swash', Helvetica, sans-serif;   font-size: 35px;
-    padding: 5px;
+h1 {
+  font: 400 100px/1.3 "Berkshire Swash", Helvetica, sans-serif;
+  font-size: 35px;
+  padding: 5px;
 }
 
-#searchbar{
-    padding-right: 500px;
+#searchbar {
+  padding-right: 500px;
 }
 
-#buttpost{
-    background-color:burlywood;
+#buttpost {
+  background-color: burlywood;
 }
 
-#header{
-/*    position: fixed;*/
-    top: 0;
-    width: 100%;
-    height: 12%;
-    text-align:left;
-    background-color: #C9D43F;
-    color: white;
-    padding: 6px;
-    z-index: 9999;
+#header {
+  /*    position: fixed;*/
+  top: 0;
+  width: 100%;
+  height: 12%;
+  text-align: left;
+  background-color: #c9d43f;
+  color: white;
+  padding: 6px;
+  z-index: 9999;
 }
 
-.contentContainer{
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 85px;
-    background-color: lightgray;
-    height: auto;
-    width: 85%;
-    padding: 20px;  
-    padding-top: 50px;
-    border-radius: 5px;
-    display: block;
+.contentContainer {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 85px;
+  background-color: lightgray;
+  height: auto;
+  width: 85%;
+  padding: 20px;
+  padding-top: 50px;
+  border-radius: 5px;
+  display: block;
 }
 
-#toProfile{
-    background: url(images/user.png);
-    height: 40px;
-    width: 40px;
+#toProfile {
+  background: url(images/user.png);
+  height: 40px;
+  width: 40px;
 }
 
-#userIcon{
-    background: url(images/dog.jpg) 50% 50% no-repeat;
-    margin-left: 50px;
-    height: 90px;
-    width: 90px;
-    background-size: cover;
-    border-radius: 5px;
-    display: inline;
-    margin-top: 10px
+#userIcon {
+  background: url(images/ferris.jpg) 50% 50% no-repeat;
+  margin-left: 50px;
+  height: 90px;
+  width: 90px;
+  background-size: cover;
+  border-radius: 5px;
+  display: inline;
+  margin-top: 10px;
 }
 
-.postHeader{
-    text-align: left;
-    display: inline-flex;
-    margin-left: 20px;
+.postHeader {
+  text-align: left;
+  display: inline-flex;
+  margin-left: 20px;
 }
 
-#username{
-    font-size: 20px;
-    margin-left: 10px;
-    margin-top: 20px;
-    padding: 5px;
-    color: #848B29;
+#username {
+  font-size: 20px;
+  margin-left: 10px;
+  margin-top: 20px;
+  padding: 5px;
+  color: #848b29;
 }
 
-#datetime{
-    margin-top: -20px;
-    margin-left: 15px;
-    flex-direction: column;
-    font-size: 16px;
-    color: #676771;
+#datetime {
+  margin-top: -20px;
+  margin-left: 15px;
+  flex-direction: column;
+  font-size: 16px;
+  color: #676771;
 }
 
-#bananas{
-    display: block;
+#bananas {
+  display: block;
 }
 
-.imgCap{
-    margin-left: 95px;
-    margin-top: 20px;
+.imgCap {
+  margin-left: 95px;
+  margin-top: 20px;
 }
 
-#postImg{
-    background: url(images/cuba.jpg);
-    width: 80%;
-    height: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 15px;
-    background-size: cover;
+#postImg {
+  background: url(images/cuba.jpg);
+  width: 80%;
+  height: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
+  background-size: cover;
 }
 
-.postFooter{
-    display: block;
+.postFooter {
+  display: block;
 }
 
-#icons{
-    display: inline-flex;
-    margin-left: 74px;
-    margin-top: 5px;
+#icons {
+  display: inline-flex;
+  margin-left: 74px;
+  margin-top: 5px;
 }
 
-#icons img{
-    height: 40px;
-    width: 40px;
-    padding: 5px;
-    margin-top: 10px;
-    margin-left: 15px;
+#icons img {
+  height: 40px;
+  width: 40px;
+  padding: 5px;
+  margin-top: 10px;
+  margin-left: 15px;
 }
 
-#apples{
-    margin-left: 96px;
-    padding: 3px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+#likesContainer {
+  margin-left: 96px;
+  padding: 3px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-#numberOfLikes{
-    display: inline;
+#numberOfLikes {
+  display: inline;
 }
 
-#likelike{
-    display: inline;
+#likelike {
+  display: inline;
 }
 
-#comments{
-    display: inline-flex;
-    margin-left: 20px;
+#comments {
+  display: inline-flex;
+  margin-left: 20px;
 }
 
-#kiwi{
-    margin-left: 20px;
+#commentContainer {
+  margin-left: 20px;
 }
 
-#userIconComment{
-    background: url(images/bailey.JPG) 50% 50% no-repeat;
-    background-size: cover;
-    height: 50px;
-    width: 50px;
-    border-radius: 5px;
-    margin-left: 77px;
+#userIconComment {
+  background: url(images/forest.jpeg) 50% 50% no-repeat;
+  background-size: cover;
+  height: 50px;
+  width: 50px;
+  border-radius: 5px;
+  margin-left: 77px;
 }
 
-#comment{
-    margin-top: -10px;
+#comment {
+  margin-top: -10px;
 }
 
-#usernameComment{
-    color: #848B29;
-    margin-top: -1px;
+#usernameComment {
+  color: #848b29;
+  margin-top: -1px;
 }
 
 /*NEW POST*/
-.createpost{
-    margin-left: 10px;
-    padding: 30px;  
+.createpost {
+  margin-left: 10px;
+  padding: 30px;
 }
 
 .card {
-     display: block;
-     text-align: center;
+  display: block;
+  text-align: center;
 }
 
-#createcard{
-    padding-top: 100px;
+#createcard {
+  padding-top: 100px;
 }
 .create {
-     color: whitesmoke;
-     background-color: dodgerblue;     
-     font: 400 100px/1.3 'Berkshire Swash', Helvetica, sans-serif;   
-     font-size: 25px;
-     border-top-left-radius: 5px;
-     border-top-right-radius: 5px;
-     background-color: #C9D43F;
+  color: whitesmoke;
+  background-color: dodgerblue;
+  font: 400 100px/1.3 "Berkshire Swash", Helvetica, sans-serif;
+  font-size: 25px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  background-color: #c9d43f;
 }
 
 /*PROFILE*/
 
-#profpic{
-    background: url(images/bailey.JPG) no-repeat;
-    background-size: contain;
-    height: 200px;
-    width: 300px;
-    text-align: center;
+#profpic {
+  background: url(images/forest.jpeg) no-repeat;
+  background-size: contain;
+  height: 200px;
+  width: 300px;
+  text-align: center;
 }
 
-#userposts{
-    display: block;
+#profilefeed {
+  margin: 20px;
+  padding: 10px;
 }
 
-#profilefeed{
-    background: url(images/ferris.jpg) no-repeat;
-    background-size: contain;
-    padding-top: 10px;
-    margin-bottom: 20px;
-    height: 250px;
-    width: 400px;
-    text-align: center;
+#profilefeed img {
+  width: 100 px;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.imgcap img {
+  width: auto;
+  height: 400px;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.btnLike {
+  content: url(images/like.png);
+}
+
+
+
+.registercontainer .form-group {
+  padding-left:20px;
+  text-align: left;
+  width: 100%;
+  clear: both;
+  padding-right: 20px;
+}
+.registercontainer input {
+  float: right;
+  width: 340px;
 }
