--- a/views/new_post.hbs
+++ b/views/new_post.hbs
@@ -1,14 +1,14 @@
 <div class="mx-auto" style="width: 600px;" id="createcard">
     <div class="card" style="width: 36rem;", id="createpost">
         <p class="create">Create Post</p>
-        <form action="/post" method="POST">
+        <form method="POST" enctype="multipart/form-data" action="/upload">
             <input class="form-control form-control-lg" type="text" placeholder="Title" id="titl" name="titl"><br>
             <div class="form-group">
                 <textarea class="form-control" id="exampleFormControlTextarea3" rows="7" placeholder="Text" name="cap"></textarea>
             </div>                
             <label for="exampleFormControlFile1">Insert File</label>
-            <input type="file" class="form-control-file" id="exampleFormControlFile1" name="img">
-            <button type="submit" class="btn btn-primary" href="/post/feed" id="buttpost">POST</button>
+            <input type="file" class="form-control-file" id="exampleFormControlFile1" name="postpic">
+            <button type="submit" class="btn btn-primary" id="buttpost">POST</button>
         </form>
     </div>
 </div>
