--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,28 +1,51 @@
- <div class="mx-auto" style="width: 600px;" id="createcard">
+<div class="mx-auto" style="width: 600px;" id="createcard">
 
-            <div class="card" style="width: 36rem;", id="createpost">
-                <p class="create">Profile</p>
-                
-                <div id="profpic" class="rounded mx-auto d-block"></div>
-<!--                <img src="images/dog.jpg" id="profpic" class="rounded mx-auto d-block">-->
-                  <h1>{{username}}</h1>
-                  <p class="title">Dog Lover</p>
-                  <p>De La Salle University</p>
-<!--
+    <div class="card" style="width: 36rem;" , id="createpost">
+        <p class="create">Profile</p>
+
+        <div id="profpic" class="rounded mx-auto d-block"></div>
+        <!--                <img src="images/dog.jpg" id="profpic" class="rounded mx-auto d-block">-->
+        <h1>{{account.fullname}}</h1>
+        
+        
+        <p class="title">{{account.username}}</p>
+        <p class="title">{{account.email}}</p>
+        {{#if this.edit}}
+        <a class="btn btn-secondary" href="/edit">Edit Profile</a>
+        {{/if}}
+        <br><br>
+        <!--
                   <a href="#"><i class="fa fa-dribbble"></i></a>
                   <a href="#"><i class="fa fa-twitter"></i></a>
                   <a href="#"><i class="fa fa-linkedin"></i></a>
                   <a href="#"><i class="fa fa-facebook"></i></a>
 -->
-                
-                <p class="create">Posts</p>
-                <div id="userposts">
-                    <div id="profilefeed" class="rounded mx-auto d-block"></div>
-                    <div id="profilefeed" class="rounded mx-auto d-block"></div>
-<!--
+
+        <p class="create">Posts</p>
+
+        <div id="userposts">
+
+            {{#each images}}
+
+            <!--data:image/<%=image.img.contentType%>;base64, <%=image.img.data.toString('base64')%>-->
+            <div id="profilefeed" class="rounded mx-auto d-block">
+                <img src="{{this.image}}">
+                <h4>{{this.title}}</h4>
+                <p>{{this.caption}}</p>
+                <p>{{this.likes}} liked this</p>
+                {{#if this.edit}}
+                <a class="btn btn-warning" href="/editpost?id={{this.id}}">Edit</a>
+                <a class="btn btn-danger" href="/deletepost?id={{this.id}}">Delete</a>
+                {{/if}}
+            </div>
+            <hr>
+            <br>
+
+            <!--
                     <img src="images/ferris.jpg" id="profilefeed" class="rounded mx-auto d-block">
                     <img src="images/forest.jpeg" id="profilefeed" class="rounded mx-auto d-block">
 -->
-                </div>
-
+            {{/each}}
         </div>
+
+    </div>
