--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -8,7 +8,7 @@
         <h1>{{account.fullname}}</h1>
         
         
-        <p class="title">{{account.username}}</p>
+        <p class="title" id="usernameprof">{{account.username}}</p>
         <p class="title">{{account.email}}</p>
         {{#if this.edit}}
         <a class="btn btn-secondary" href="/edit">Edit Profile</a>
