--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -77,10 +77,9 @@ h1 {
   color: #848b29;
 }
 
-#usernameprof{
+#profileCaption{
     margin-top: 7px;
 }
-
 #datetime {
   margin-top: -40px;
   margin-left: 15px;
